# testCourceLR1

./: .gitignore  CMakeLists.txt  tests.txt
.github/: checks.yml
lib/: CMakeLists.txt  lr1.cpp
tests/: lr1_test.cpp
